monitoring/kube/grafana-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: monitoring
  name: grafana-deployment
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - name: datasources
          mountPath: /etc/grafana/provisioning/datasources/datasource.yml
          subPath: grafana-datasource.yml
        - name: storage
          mountPath: /var/lib/grafana
      volumes:
      - name: datasources
        configMap:
          name: grafana-configmap
      - name: storage
        persistentVolumeClaim:
          claimName: grafana-pvc
