monitoring/kube/grafana-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
